--- a/static/style.css
+++ b/static/style.css
@@ -1,79 +1,16 @@
-/* body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(135deg, #ff5f6d, #ffc371);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    overflow-y: auto;
-    color: #fff;
-}
-.container {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    padding: 30px;
-    max-width: 400px;
-    width: 90%;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-    margin: 20px; /* Ensures visibility on very small screens 
-}
-.container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #fff;
-}
-.form-group {
-    margin-bottom: 15px;
-}
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    font-size: 14px;
-}
-.form-group input {
-    width: 100%;
-    padding: 10px;
-    font-size: 14px;
-    border: none;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 0.8);
-}
-button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    color: white;
-    background: #ff5f6d;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-button:hover {
-    background: #e53935;
-} */
-
-
 body {
     font-family: Arial, sans-serif;
-    /*background-color: #0E1117;
-    color: #E0E0E0;
-    margin: 0;
-    padding: 0;*/
-    background-image: url('/static/ima2.avif'); /* Replace with your image path */
-    background-size: cover; /* Ensures the image covers the container */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents repetition */
-    height: 100vh; /* Full-screen height */
-    display: flex; /* For centering text */
-    justify-content: center; /* Horizontally center text */
-    align-items: center; /* Vertically center text */
-    color: white; /* Text color */
-    font-size: 24px; /* Adjust text size */
-    font-weight: bold; /* Make text bold */
+    background-image: url('/static/ima2.avif'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 100vh; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    color: white; 
+    font-size: 24px; 
+    font-weight: bold; 
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 
@@ -81,9 +18,9 @@ body {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
-    background-color: rgba(49, 5, 45, 0.9); /* Adds transparency */
+    background-color: rgba(49, 5, 45, 0.9); 
     border-radius: 15px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Shadow remains intact */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
     border: 1px solid rgba(45, 55, 72, 0.8);
 }
 .up{
@@ -160,6 +97,6 @@ body {
 }
 @media (max-width: 768px) {
     .body {
-        font-size: 18px; /* Smaller text for smaller screens */
+        font-size: 18px; 
     }
 }
